# FlexiTransformers

./: .buildinfo  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  __init__.py  attention.py  core.py  embeddings.py  flexit.html  genindex.html  hello.py  index.html  layers.py  logo-README.md  loss.py  models.py  modules.html  objects.inv  pos_embeddings.py  pyproject.toml  run-checks.sh  search.html  searchindex.js  training.py  utils.py
.doctrees/: environment.pickle  flexit.doctree  index.doctree  modules.doctree
.github/workflow/: docs_release.yaml  pypi_release.yaml
.github/workflows/: docs_release.yaml  pypi_release.yaml
_modules/: index.html
_modules/flexit/: callbacks.html  configs.html  core.html  loss.html  models.html  pos_embeddings.html
docs/: conf.py  flexit.rst  index.rst  modules.rst
examples/: 01_quick_start.py  02_manual_config.py  03_positional_encodings.py  04_encoder_only.py  05_encoder_decoder.py  06_decoder_only.py  07_output_heads.py  08_save_load.py  09_custom_pe.py  README.md
flexi_transformers/: __init__.py  attention.py  core.py  layers.py  loss.py  models.py  training.py  utils.py
flexit/: __init__.py  train.py  utils.py  version.py
flexit/attention/: __init__.py  multi_head.py
flexit/blocks/: __init__.py  causal_decoder.py  cross_decoder.py  encoder.py
flexit/config/: __init__.py  model_config.py  training_config.py
flexit/core/: __init__.py  embeddings.py  feedforward.py  generator.py  normalization.py
flexit/factory/: __init__.py  model_factory.py
flexit/inference/: __init__.py  decoding.py  sampling.py
flexit/layers/: __init__.py  causal_decoder_layer.py  cross_decoder_layer.py  encoder_layer.py  sublayer.py
flexit/models/: __init__.py  base.py  decoder_only.py  encoder_decoder.py  encoder_only.py  flexi.py
tests/: test_attention.py  test_config.py  test_inference.py  test_models.py  test_training.py  test_version.py
(+82 files in other folders)
